--- a/src/components/map.css
+++ b/src/components/map.css
@@ -293,7 +293,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 /* visual tweaks */
 
 .leaflet-container {
-    background: #ddd;
+    background: #bbb;
     outline-offset: 1px;
 }
 .leaflet-container a {
